// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeBlock renders with a string 1`] = `
<pre
  className="makeStyles-root-2"
>
  <code
    className="typescript"
  >
    var code = 'block';
  </code>
</pre>
`;

exports[`CodeBlock renders with a string and a specified language 1`] = `
<pre
  className="makeStyles-root-4"
>
  <code
    className="javascript"
  >
    $code = "block";
  </code>
</pre>
`;
